examples/test/testpolicy13131.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13131
  namespace: namespace48
spec:
  podSelector:
    matchLabels:
      key30: value10
      key6: value23
      key9: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value24
      podSelector:
        matchLabels:
          key7: value32
          key32: value46
